# android-libs

./: .directory  .gitignore  .update.sh.kate-swp  CHANGELOG  README.md  build.gradle  gradle.properties  init.sh  mark.sh  release.sh  settings.gradle  update.sh
.circleci/: config.yml
android-arch/: .gitignore  build.gradle  proguard-rules.pro
android-camera/: .gitignore  build.gradle  proguard-rules.pro
android-opengl/: build.gradle  proguard-rules.pro
app/: build.gradle  proguard-rules.pro
async/: .gitignore  build.gradle  proguard-rules.pro
bundle-content/: .gitignore  build.gradle
bundle-drawables/: .gitignore  CMakeLists.txt  build.gradle
bundle-fragments/: build.gradle
bundle-loaders/: .gitignore  build.gradle  proguard-rules.pro
bundle-logger/: .gitignore  build.gradle
bundle-network/: .gitignore  build.gradle  proguard-rules.pro
bundle-opengl/: .gitignore  build.gradle  proguard-rules.pro
camera/: .gitignore  build.gradle  proguard-rules.pro
clean/: build.gradle  proguard-rules.pro
content/: .gitignore  build.gradle  proguard-rules.pro
data/: build.gradle  proguard-rules.pro
drawables/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
extensions/: .gitignore  build.gradle  proguard-rules.pro
fragments/: .gitignore  build.gradle  proguard-rules.pro
java-arch/: build.gradle  proguard-rules.pro
java-camera/: .gitignore  build.gradle  proguard-rules.pro
java-ok-tools/: .gitignore  build.gradle  proguard-rules.pro
uploader/src/main/cpp/: CMakeLists.txt  lovehash-lib.cpp  lovehash.cpp  lovehash.h
(+406 files in other folders)
